Use jekyll/jekyll:4.2.0 as base

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,10 @@
-FROM alpine as Source
-
-WORKDIR /
-
+FROM jekyll/jekyll:4.2.0 AS build
 RUN apk update && \
-    apk add git
-RUN git clone --depth=1 https://github.com/sdu-concurrency/group-website /git
-
-FROM ruby as Build
-COPY --from=Source /git/web /srv/jekyll
-RUN apt update && \
-    apt install -y graphviz
-WORKDIR /srv/jekyll
-RUN bundle install
-RUN bundle exec jekyll build --trace
-RUN mv /srv/jekyll/_site /site
+    apk add graphviz
+RUN git clone --depth=1 https://github.com/sdu-concurrency/group-website.git /git
+RUN mv /git/web/* /srv/jekyll
+RUN jekyll build
 
 FROM jolielang/leonardo
 ENV LEONARDO_WWW /web
-COPY --from=Build /site $LEONARDO_WWW
+COPY --from=build /srv/jekyll/_site $LEONARDO_WWW
