Added Luis and Hugo talks

--- a/web/_data/visiting.yml
+++ b/web/_data/visiting.yml
@@ -1,3 +1,11 @@
+- name: Hugo López
+  from: 2023-06-26
+  to: 2023-06-27
+  affiliation: Technical University of Denmark
+  website: http://lopezacosta.net/
+  picture: images/people/lcosta.jpg
+  host: Marco Peressotti
+
 - name: Marco Prandini
   from: 2022-10-17
   to: 2022-12-23
