- updated ppl and positions - fixed lbocchi

--- a/web/_data/visiting.yml
+++ b/web/_data/visiting.yml
@@ -3,7 +3,7 @@
   to: 2024-02-27
   affiliation: University of Kent, United Kingdom
   website: https://www.kent.ac.uk/computing/people/3119/bocchi-laura
-  picture: images/people/lcosta-p.jpg
+  picture: images/people/lbocchi-p.jpg
   host: Marco Peressotti
 - name: Hugo López
   from: 2023-06-26
